@@ -5,6 +5,7 @@
 2. Align mobile bottom nav texts.
 3. Fix mobile bottom nav layout with Firefox.
 4. Fix add-all/play-all from Genre albums list.
+5. Supply album sort when using add-all/play-all.
 
 1.1.1
 -----
